# CommonThread

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_PRIVACY_POLICY.md  README.md  SECURITY.md  compose.yml  index.html  mkdocs.yml  package-lock.json  pyproject.toml  sitemap.xml
architecture/: index.html
commonthread/: .dockerignore  .env.example  Dockerfile  README.md  launch_backend.sh  manage.py  pyproject.toml  pytest.ini
commonthread/commonthread/: asgi.py  proj_documentation  settings.py  urls.py  wsgi.py
commonthread/ct_application/: app_documentation.md  apps.py  dynamic_story_tagger.py  models.py  package-lock.json  pytest.ini  summarizer.py  tests.py  utils.py  views.py
commonthread/ct_application/backend/tests/: __init__.py  test_db_sample.py  test_front_sample.py
commonthread/ct_application/cloud/: consumer_service.py  producer_service.py  s3.py
commonthread/ct_application/functions/: sample.py
commonthread/ct_application/migrations/: 0001_initial.py  0002_alter_userlogin_user_id_alter_orguser_user_id_and_more.py  0002_remove_story_org_id_tag_value_alter_customuser_email_and_more.py  0003_alter_userlogin_user_id.py  0003_remove_story_story_id_story_id.py  0004_alter_userlogin_user_id.py  0004_remove_tag_tag_id_tag_id.py  0005_remove_project_proj_id_remove_storytag_story_tag_id_and_more.py  0005_user_alter_orguser_user_id_alter_project_curator_and_more.py  0006_remove_customuser_user_id_customuser_id.py  0007_rename_content_story_text_content_remove_project_id_and_more.py  0008_rename_text_content_story_content_and_more.py  0009_rename_org_id_orguser_org_and_more.py  0010_alter_tag_required.py  0011_story_transcription_alter_customuser_profile_and_more.py  0012_remove_story_transcription_story_is_transcript.py  0013_project_description.py  0014_project_insight_json.py
commonthread/ct_application/ml/: README.MD  perplexity_service.py
commonthread/ct_application/ml/ml_pipelines/: summarizing_pipeline.py  tagging_pipeline.py  test_tagging.py  test_transcription.py  transcribing_pipeline.py
commonthread/ct_application/templates/: index.html
(+104 files in other folders)
